--- a/src/renderer/src/styles/global.css
+++ b/src/renderer/src/styles/global.css
@@ -28,3 +28,36 @@
 .shadow-top{
     box-shadow: -2px -3px 5px 0px rgba(0,0,0, .2);
 }
+
+/* Animation Loader Dot  */
+
+.dot {
+  animation: blink 1.4s infinite both;
+  font-size: 24px;
+}
+
+.dot:nth-child(1) {
+  animation-delay: 0s;
+}
+
+.dot:nth-child(2) {
+  animation-delay: 0.2s;
+}
+
+.dot:nth-child(3) {
+  animation-delay: 0.4s;
+}
+
+@keyframes blink {
+  0% {
+    opacity: 0.2;
+  }
+  20% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0.2;
+  }
+}
+
+/* Animation Loader Dot  */
