--- a/src/renderer/src/styles/global.css
+++ b/src/renderer/src/styles/global.css
@@ -61,3 +61,10 @@
 }
 
 /* Animation Loader Dot  */
+
+.dropdown-menu{
+  /* background: red; */
+  display: flex; 
+  flex-direction: column;
+  align-items: end;
+}
